build_log.txt
    Checking vpn-aggregator v1.0.0 (D:\Coding\Projects\vpn-aggregator)
error[E0369]: binary operation `==` cannot be applied to type `&UrlResult`
  --> src\main.rs:90:13
   |
87 | #[derive(Clone, PartialEq, Eq)]
   |                 --------- in this derive macro expansion
...
90 |     UrlDone(UrlResult),
   |             ^^^^^^^^^
   |
note: an implementation of `PartialEq` might be missing for `UrlResult`
  --> src\main.rs:33:1
   |
33 | struct UrlResult {
   | ^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `UrlResult` with `#[derive(PartialEq)]`
   |
33 + #[derive(PartialEq)]
34 | struct UrlResult {
   |

error[E0277]: the trait bound `UrlResult: Eq` is not satisfied
  --> src\main.rs:90:13
   |
87 | #[derive(Clone, PartialEq, Eq)]
   |                            -- in this derive macro expansion
...
90 |     UrlDone(UrlResult),
   |             ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Eq` is not implemented for `UrlResult`
  --> src\main.rs:33:1
   |
33 | struct UrlResult {
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `AssertParamIsEq`
  --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\core\src\cmp.rs:371:0

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `vpn-aggregator` (bin "vpn-aggregator") due to 2 previous errors
